--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- <script defer src ="http://localhost:3000/socket.io/socket.io.js"></script>
+    <script defer src ="../src/utils/script.js"></script> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
